--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./twosum.js"></script>
+    <!-- <script src="./twosum.js"></script> -->
     <!-- <script src="./sum1darray.js"></script> -->
+    <!-- <script src="./searchindex.js"></script> -->
+    <script src="./palindrome.js"></script>
 </body>
 </html>
